...
    onBack: (() -> Unit)? = null,
) {
    TopAppBar(
        title = { },
        navigationIcon = {
            IconButton(
                modifier = Modifier.testTag("btnNavUp"),
                onClick = {
                    onBack?.invoke()
                }) {
                Icon(
                    imageVector = Icons.AutoMirrored.Default.ArrowBack,
                    stringResource(id = R.string.a11y_back)
...
