...
                limit = 6
            )
            Button(
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(top = 6.dp)
                    .testTag("btnNext"),
                onClick = onNext::invoke
            ) {
                Text(text = stringResource(id = R.string.label_next))
            }
        }
    }
...

@Preview
@Composable
fun PreviewSignUpCodeVerification() {
    SignUpCodeVerification(
        /*Preview*/
        email = "torang@torang.com",
        confirmCode = "123456",
        onClear = {},
        onValueChange = {},
        onNext = {},
        onBack = {},
        onAlertDismiss = {},
...
