...
                    }
                } else if (value.isNotEmpty()) {
                    Image(
                        painter = painterResource(id = R.drawable.ic_x),
                        contentDescription = "",
                        modifier = Modifier
                            .testTag("btnClear")
                            .clickable(
                                indication = null,
                                interactionSource = remember { MutableInteractionSource() }
                            ) {
                                if (enable != false)
                                    onClear.invoke()
...
