...
                modifier = Modifier.padding(vertical = 6.dp),
                text = stringResource(id = R.string.describe_input_password)
            )
            //Input password
            SignCommonTextField(
                modifier = Modifier
                    .testTag("tfPassword")
                    .padding(vertical = 6.dp),
                label = stringResource(id = R.string.label_password),
                value = password,
                onValueChange = onValueChange,
                placeHolder = stringResource(id = R.string.password_place_holder),
                onClear = { visiblePassword = !visiblePassword },
...
                isPasswordVisual = visiblePassword
            )
            //next button
            Button(
                modifier = Modifier
                    .padding(top = 6.dp)
                    .testTag("btnNext")
                    .fillMaxWidth(),
                onClick = { onNext.invoke() }) {
                Text(text = stringResource(id = R.string.label_next))
            }
        }
    }
...
